test/positive/feature_compoundnames.java

public class feature_compoundnames {
  public feature_compoundnames() {}
  public void m() {
    java.util.Arrays x = null;
  }
}

