test/negative/LocalsWithSameName1.java
public class LocalsWithSameName1 {
    public LocalsWithSameName1() {
        int a = 0;
        {
            int a = 1;
        }
    }
}
